syntax = "proto3";

option go_package = "github.com/P3rCh1/chat-server/proto/msgpb";

package msgpb;

import "google/protobuf/timestamp.proto";

service MessageService {
    rpc Send(SendRequest) returns (SendResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Ping(Empty) returns (Empty);
}

message SendRequest {
    int64 roomID = 1;
    int64 UID = 2;
    string type = 3;
    string text = 4;
}

message SendResponse {
    int64 ID = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message Message {
    int64 ID = 1;
    int64 roomID = 2;
    int64 UID = 3;
    string type = 4;
    string text = 5;
    google.protobuf.Timestamp timestamp = 6;
}

message GetRequest {
    int64 roomID = 1;
    int64 lastID = 2;
}

message GetResponse {
    repeated Message messages = 1;
}

message Empty {}
